--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E Commerce Website</title>
   <link rel="stylesheet" href="./Styles/index.css">
-  <link rel="stylesheet" href="./media Querry/media1.css">
+  <link rel="stylesheet" href="./media Querry/media-tab.css">
+  <link rel="stylesheet" href="./media Querry/media-mob.css">
+
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
   <!-- icon from font awesome -->
   <script src="https://kit.fontawesome.com/653f78528c.js" crossorigin="anonymous"></script>
@@ -21,7 +23,6 @@
         <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <!-- icon from font awesome -->
         <li class="bag"><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
 
         <i id="close" class="fa-solid fa-xmark"></i> 
