--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
     
       <section id="product1" class="section-p1">
         <div class="pro-container">
-          <div class="pro">
+          <div class="pro" onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f1.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -286,7 +286,6 @@
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
         </div> 
-    
       </section>
 
       <section id="pagination" class="section-p1">
