--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f2.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -74,7 +74,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f3.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -89,7 +89,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f4.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -104,7 +104,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f5.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -119,7 +119,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f6.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -134,7 +134,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f7.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -149,7 +149,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/f8.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -164,8 +164,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n1.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -180,7 +179,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n2.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -195,7 +194,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n3.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -210,7 +209,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n4.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -225,7 +224,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n5.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -240,7 +239,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro" onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n6.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -255,7 +254,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n7.jpg" alt="">
             <div class="des">
               <span>adidas</span>
@@ -270,7 +269,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
-          <div class="pro">
+          <div class="pro"  onclick="window.location.href='sproduct.html';">
             <img src="./img/products/n8.jpg" alt="">
             <div class="des">
               <span>adidas</span>
