create Cart Page

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog</title>
         <link rel="stylesheet" href="./Styles/index.css">
-        <link rel="stylesheet" href="./Styles/page.css">
+        <link rel="stylesheet" href="./Styles/shop.css">
         <link rel="stylesheet" href="./Styles/blog.css">
         <link rel="stylesheet" href="./media Querry/media-tab.css">
         <link rel="stylesheet" href="./media Querry/media-mob.css">
@@ -26,13 +26,13 @@
             <li><a class="active" href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="bag"><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <li class="bag"><a href="./cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
     
             <i id="close" class="fa-solid fa-xmark"></i> 
           </ul>
         </div>
         <div id="mobile">
-          <a  href=""><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
+          <a  href="./cart.html"><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
           <i id="burger" class="fa-solid fa-bars bar"></i>
         </div>
       </section>
