--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li class="bag"><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
+        <li class="bag"><a href="./cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
 
         <i id="close" class="fa-solid fa-xmark"></i> 
       </ul>
     </div>
     <div id="mobile">
-      <a  href=""><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
+      <a  href="./cart.html"><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
       <i id="burger" class="fa-solid fa-bars bar"></i>
     </div>
 
@@ -87,7 +87,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -102,7 +102,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -117,7 +117,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -132,7 +132,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -147,7 +147,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -162,7 +162,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -177,7 +177,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -192,7 +192,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -221,7 +221,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -236,7 +236,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -251,7 +251,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -266,7 +266,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -281,7 +281,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -296,7 +296,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -311,7 +311,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
@@ -326,7 +326,7 @@
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
           </div>
-          <h4>$78</h4>
+          <h4>€ 78</h4>
         </div>
         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
       </div>
