--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cara</title>
         <link rel="stylesheet" href="./Styles/index.css">
-        <link rel="stylesheet" href="./Styles/page.css">
+        <link rel="stylesheet" href="./Styles/shop.css">
         <link rel="stylesheet" href="./media Querry/media-tab.css">
         <link rel="stylesheet" href="./media Querry/media-mob.css">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -25,13 +25,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="bag"><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <li class="bag"><a href="./cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
     
             <i id="close" class="fa-solid fa-xmark"></i> 
           </ul>
         </div>
         <div id="mobile">
-          <a  href=""><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
+          <a  href="./cart.html"><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
           <i id="burger" class="fa-solid fa-bars bar"></i>
         </div>
     
@@ -55,7 +55,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -70,7 +70,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -85,7 +85,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -100,7 +100,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -115,7 +115,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -130,7 +130,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -145,7 +145,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -160,7 +160,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -175,7 +175,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -190,7 +190,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -205,7 +205,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -220,7 +220,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -235,7 +235,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -250,7 +250,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -265,7 +265,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -280,7 +280,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
