--- a/sproduct.html
+++ b/sproduct.html
@@ -25,13 +25,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="bag"><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <li class="bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
     
             <i id="close" class="fa-solid fa-xmark"></i> 
           </ul>
         </div>
         <div id="mobile">
-          <a  href=""><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
+          <a  href="cart.html"><i id="bag" class="fa-solid fa-bag-shopping"></i></a>
           <i id="burger" class="fa-solid fa-bars bar"></i>
         </div>
     
@@ -60,7 +60,7 @@
         <div class="pro-description">
           <h6>Home/T-Shirt</h6>
           <h4>Men's Fashion T Shirt</h4>
-          <h2>139€</h2>
+          <h2>78€</h2>
           <select name="size" id="size">
             <option value="select">Select Size</option>
             <option value="XS">XS</option>
@@ -110,7 +110,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -125,7 +125,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -140,7 +140,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
@@ -155,7 +155,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
               </div>
-              <h4>$78</h4>
+              <h4>€ 78</h4>
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </div>
